<resources>
    <string name="app_name">My Application</string>
    <string name="button_1">Button</string>
    <string name="button_2">Button</string>
    <string name="button_3">Button</string>
    <string name="button_4">Button</string>
    <string name="button_5">Button</string>
    <string name="button_6">Button</string>
    <string name="b_1">B []</string>
    <string name="b_2">B []</string>
    <string name="b_3">B []</string>
</resources>