<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="26dp"
        android:backgroundTint="#02DEFA"
        android:text="@string/button_1"
        android:textColor="@color/black"
        android:textColorHint="#02DFFB"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#0228FF"
        android:text="@string/button_2"
        android:textColor="#FF0303"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="3dp"
        android:text="@string/button_3"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />


    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#028175"
        android:text="@string/button_4"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="34dp"
        android:backgroundTint="#0026FB"
        android:text="@string/button_5"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button6"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#7C8804"
        android:text="@string/button_6"
        android:textColor="#FFFCFC"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.416"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="302dp"
        android:backgroundTint="#B54917"
        android:text="@string/b_1"
        android:textColor="#DA1414"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <Button
        android:id="@+id/button8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="302dp"
        android:backgroundTint="#F83D02"
        android:text="@string/b_2"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button9"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="302dp"
        android:backgroundTint="#AE2A00"
        android:text="@string/b_3"
        android:textColor="#008EFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button8"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>